[package]
name = "vault-pda-fuzz"
version = "0.1.0"
edition = "2021"

[lib]
name = "fuzz_helpers"
path = "fuzz_targets/fuzz_setup.rs"

[dependencies]
# Fuzzing dependencies (both honggfuzz and libfuzzer supported)
honggfuzz = { version = "0.5", optional = true }
libfuzzer-sys = { version = "0.4", optional = true }
arbitrary = { version = "1.3", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["rt", "macros"] }

# Solana dependencies
solana-program-test = "2.0"
solana-sdk = "2.0"
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token = "6.0"

# Local program dependency
vault-pda = { path = "../programs/vault-pda", features = ["no-entrypoint"] }

[features]
default = []
honggfuzz_fuzz = ["honggfuzz"]
libfuzzer_fuzz = ["libfuzzer-sys"]

# cargo-fuzz metadata
[package.metadata]
cargo-fuzz = { targets = ["fuzz_deposit_libfuzzer"] }

[[bin]]
name = "fuzz_initialize"
path = "fuzz_targets/fuzz_initialize.rs"

[[bin]]
name = "fuzz_initialize_vault"
path = "fuzz_targets/fuzz_initialize_vault.rs"

[[bin]]
name = "fuzz_deposit"
path = "fuzz_targets/fuzz_deposit.rs"

[[bin]]
name = "fuzz_redeem"
path = "fuzz_targets/fuzz_redeem.rs"

[[bin]]
name = "fuzz_transfer_ownership"
path = "fuzz_targets/fuzz_transfer_ownership.rs"

[[bin]]
name = "fuzz_all_instructions"
path = "fuzz_targets/fuzz_all_instructions.rs"

[[bin]]
name = "fuzz_deposit_libfuzzer"
path = "fuzz_targets/fuzz_deposit_libfuzzer.rs"
test = false
doc = false
